--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,8 @@ dependencies {
 
 
 	// Redis
-	implementation('org.springframework.boot:spring-boot-starter-data-redis')
-	implementation(group: 'it.ozimov', name: 'embedded-redis', version: '0.7.1')
-	implementation('org.redisson:redisson-spring-boot-starter:3.16.8')
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+	implementation 'it.ozimov:embedded-redis:0.7.2'
 
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
